Import of PLICEASE/Test-Clustericious-Cluster-0.04 from CPAN.
gitpan-cpan-distribution: Test-Clustericious-Cluster
gitpan-cpan-version:      0.04
gitpan-cpan-path:         PLICEASE/Test-Clustericious-Cluster-0.04.tar.gz
gitpan-cpan-author:       PLICEASE
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -3,7 +3,7 @@ NAME
     Clustericious services
 
 VERSION
-    version 0.03
+    version 0.04
 
 SYNOPSIS
      use Test::Clustericious::Cluster;
@@ -86,6 +86,23 @@ METHODS
 
     You can retrieve the URL for the PlugAuth::Lite service using the
     "auth_url" attribute.
+
+    This feature requires PlugAuth::Lite and Clustericious 0.9925 or better,
+    though neither are a prerequisite of this module. If you are using this
+    method you need to either require PlugAuth::Lite and Clustericious
+    0.9925 or better, or skip your test in the event that the user has an
+    earlier version. For example:
+
+     use strict;
+     use warnings;
+     use Test::Clustericious::Cluster;
+     use Test::More;
+     BEGIN {
+       plan skip_all => 'test requires Clustericious 0.9925'
+         unless eval q{ use Clustericious 0.9925; 1 };
+       plan skip_all => 'test requires PlugAuth::Lite'
+         unless eval q{ use PlugAuth::Lite; 1 };
+     };
 
   $cluster->stop_ok( $index, [ $test_name ])
     Stop the given service. The service is specified by an index, the first
