Import of PLICEASE/Test-Clustericious-Cluster-0.06 from CPAN.
gitpan-cpan-distribution: Test-Clustericious-Cluster
gitpan-cpan-version:      0.06
gitpan-cpan-path:         PLICEASE/Test-Clustericious-Cluster-0.06.tar.gz
gitpan-cpan-author:       PLICEASE
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -3,19 +3,29 @@ NAME
     Clustericious services
 
 VERSION
-    version 0.05
+    version 0.06
 
 SYNOPSIS
      use Test::Clustericious::Cluster;
-
+ 
+     # suppose MyApp1 isa Clustericious::App and
+     # MyApp2 is a Mojolicious app
      my $cluster = Test::Clustericious::Cluster->new;
      $cluster->create_cluster_ok('MyApp1', 'MyApp2');
-
+ 
      my @urls = @{ $cluster->urls };
      my $t = $cluster->t; # an instance of Test::Mojo
  
      $t->get_ok("$url[0]/arbitrary_path");  # tests against MyApp1
      $t->get_ok("$url[1]/another_path");    # tests against MyApp2
+ 
+     __DATA__
+ 
+     @@ etc/MyApp1.conf
+     ---
+     # Clustericious configuration 
+     url <%= cluster->url %>
+     url_for_my_app2: <%= cluster->urls->[1] %>
 
 DESCRIPTION
     This module allows you to test an entire cluster of Clustericious
@@ -29,6 +39,108 @@ DESCRIPTION
     File::HomeDir::Test as the very first module in your test, as testing
     Clustericious configurations depend on the testing home directory being
     setup by File::HomeDir::Test.
+
+    In addition to passing Clustericious configurations into the
+    "create_cluster_ok" method as describe below, you can include
+    configuration in the data section of your test script. The configuration
+    files use Clustericious::Config, so you can use Mojo::Template
+    directives to embed Perl code in the configuration. You can access the
+    Test::Clustericious::Cluster instance from within the configuration
+    using the "cluster" function, which can be useful for getting the URL
+    for the your and other service URLs.
+
+     __DATA__
+ 
+     @@ etc/Foo.conf
+     ---
+     url <%= cluster->url %>
+     % # because YAML is (mostly) a super set of JSON you can
+     % # convert perl structures into config items using json
+     % # function:
+     % # (json method requires Clustericious::Config 0.25)
+     other_urls: <%= json [ @{ cluster->urls } ] %>
+
+    You can also put perl code in the data section of your test file, which
+    can be useful if there isn't a another good place to put it. This
+    example embeds as Mojolicious app "FooApp" and a Clustericious::App
+    "BarApp" into the test script itself:
+
+     ...
+     $cluster->create_cluster_ok('FooApp', 'BarApp');
+     ...
+ 
+     __DATA__
+ 
+     @@ lib/FooApp.pm
+     package FooApp;
+ 
+     # FooApp is a Mojolicious app
+ 
+     use Mojo::Base qw( Mojolicious );
+ 
+     sub startup
+     {
+       shift->routes->get('/' => sub { shift->render(text => 'hello there from foo') });
+     }
+ 
+     1;
+ 
+     @@ lib/BarApp.pm
+     package BarApp;
+ 
+     # BarApp is a Clustericious::App
+ 
+     use strict;
+     use warnings;
+     use base qw( Clustericious::App );
+ 
+     1;
+ 
+     @@ lib/BarApp/Routes.pm
+     package BarApp::Routes;
+ 
+     use strict;
+     use warnings;
+     use Clustericious::RouteBuilder;
+ 
+     get '/' => sub { shift->render(text => 'hello there from bar') };
+ 
+     1;
+
+    These examples are full apps, but you could also use this feature to
+    implement mocks to test parts of your program that use resources that
+    aren't easily available during unit testing, or may change from host to
+    host. Here is an example that mocks parts of Net::hostent:
+
+     use strict;
+     use warnings;
+     use Test::Clustericious::Cluster;
+     use Test::More tests => 2;
+ 
+     use_ok('Net::hostent');
+     is gethost('bar')->name, 'foo.example.com', 'gethost(bar).name = foo.example.com';
+ 
+     __DATA__
+ 
+     @@ lib/Net/hostent.pm
+     package Net::hostent;
+ 
+     use strict;
+     use warnings;
+     use base qw( Exporter );
+     our @EXPORT = qw( gethost );
+ 
+     sub gethost
+     {
+       my $input_name = shift;
+       return unless $input_name =~ /^(foo|bar|baz|foo.example.com)$/;
+       bless {}, 'Net::hostent';
+     }
+ 
+     sub name { 'foo.example.com' }
+     sub aliases { qw( foo.example.com foo bar baz ) }
+ 
+     1;
 
 CONSTRUCTOR
   Test::Clustericious::Cluster->new( %args )
