Import of PLICEASE/Test-Clustericious-Cluster-0.12_01 from CPAN.
gitpan-cpan-distribution: Test-Clustericious-Cluster
gitpan-cpan-version:      0.12_01
gitpan-cpan-path:         PLICEASE/Test-Clustericious-Cluster-0.12_01.tar.gz
gitpan-cpan-author:       PLICEASE
gitpan-cpan-maturity:     developer

--- a/README
+++ b/README
@@ -1,26 +1,29 @@
 NAME
+
     Test::Clustericious::Cluster - Test an imaginary beowulf cluster of
     Clustericious services
 
 VERSION
-    version 0.12
+
+    version 0.12_01
 
 SYNOPSIS
+
      use Test::Clustericious::Cluster;
- 
+     
      # suppose MyApp1 isa Clustericious::App and
      # MyApp2 is a Mojolicious app
      my $cluster = Test::Clustericious::Cluster->new;
      $cluster->create_cluster_ok('MyApp1', 'MyApp2');
- 
+     
      my @urls = @{ $cluster->urls };
      my $t = $cluster->t; # an instance of Test::Mojo
- 
+     
      $t->get_ok("$url[0]/arbitrary_path");  # tests against MyApp1
      $t->get_ok("$url[1]/another_path");    # tests against MyApp2
- 
+     
      __DATA__
- 
+     
      @@ etc/MyApp1.conf
      ---
      # Clustericious configuration 
@@ -28,6 +31,7 @@ SYNOPSIS
      url_for_my_app2: <%= cluster->urls->[1] %>
 
 DESCRIPTION
+
     This module allows you to test an entire cluster of Clustericious
     services (or just one or two). The only prerequisites are Mojolicious
     and File::HomeDir, so you can mix and match Mojolicious,
@@ -41,16 +45,16 @@ DESCRIPTION
     setup by File::HomeDir::Test.
 
     In addition to passing Clustericious configurations into the
-    "create_cluster_ok" method as describe below, you can include
-    configuration in the data section of your test script. The configuration
-    files use Clustericious::Config, so you can use Mojo::Template
-    directives to embed Perl code in the configuration. You can access the
-    Test::Clustericious::Cluster instance from within the configuration
-    using the "cluster" function, which can be useful for getting the URL
-    for the your and other service URLs.
+    create_cluster_ok method as describe below, you can include
+    configuration in the data section of your test script. The
+    configuration files use Clustericious::Config, so you can use
+    Mojo::Template directives to embed Perl code in the configuration. You
+    can access the Test::Clustericious::Cluster instance from within the
+    configuration using the cluster function, which can be useful for
+    getting the URL for the your and other service URLs.
 
      __DATA__
- 
+     
      @@ etc/Foo.conf
      ---
      url <%= cluster->url %>
@@ -68,43 +72,43 @@ DESCRIPTION
      ...
      $cluster->create_cluster_ok('FooApp', 'BarApp');
      ...
- 
+     
      __DATA__
- 
+     
      @@ lib/FooApp.pm
      package FooApp;
- 
+     
      # FooApp is a Mojolicious app
- 
+     
      use Mojo::Base qw( Mojolicious );
- 
+     
      sub startup
      {
        shift->routes->get('/' => sub { shift->render(text => 'hello there from foo') });
      }
- 
+     
      1;
- 
+     
      @@ lib/BarApp.pm
      package BarApp;
- 
+     
      # BarApp is a Clustericious::App
- 
+     
      use strict;
      use warnings;
      use base qw( Clustericious::App );
- 
+     
      1;
- 
+     
      @@ lib/BarApp/Routes.pm
      package BarApp::Routes;
- 
+     
      use strict;
      use warnings;
      use Clustericious::RouteBuilder;
- 
+     
      get '/' => sub { shift->render(text => 'hello there from bar') };
- 
+     
      1;
 
     These examples are full apps, but you could also use this feature to
@@ -116,107 +120,124 @@ DESCRIPTION
      use warnings;
      use Test::Clustericious::Cluster;
      use Test::More tests => 2;
- 
+     
      use_ok('Net::hostent');
      is gethost('bar')->name, 'foo.example.com', 'gethost(bar).name = foo.example.com';
- 
+     
      __DATA__
- 
+     
      @@ lib/Net/hostent.pm
      package Net::hostent;
- 
+     
      use strict;
      use warnings;
      use base qw( Exporter );
      our @EXPORT = qw( gethost );
- 
+     
      sub gethost
      {
        my $input_name = shift;
        return unless $input_name =~ /^(foo|bar|baz|foo.example.com)$/;
        bless {}, 'Net::hostent';
      }
- 
+     
      sub name { 'foo.example.com' }
      sub aliases { qw( foo.example.com foo bar baz ) }
- 
+     
      1;
 
 CONSTRUCTOR
-  Test::Clustericious::Cluster->new( %args )
+
+ Test::Clustericious::Cluster->new( %args )
+
     Arguments:
 
-   t
+  t
+
     The Test::Mojo object to use. If not provided, then a new one will be
     created.
 
-   lite_path
+  lite_path
+
     List reference of paths to search for Mojolicious::Lite apps.
 
 ATTRIBUTES
-  t
+
+ t
+
     The instance of Test::Mojo used in testing.
 
-  urls
+ urls
+
     The URLs for the various services. Returned as an array ref.
 
-  apps
+ apps
+
     The application objects for the various services. Returned as an array
     ref.
 
-  index
+ index
+
     The index of the current app (used from within a Clustericious::Config
     configuration.
 
-  url
+ url
+
     The url of the current app (used from within a Clustericious::Config
     configuration.
 
-  auth_url
+ auth_url
+
     The URL for the PlugAuth::Lite service, if one has been started.
 
 METHODS
-  $cluster->create_cluster_ok( @services )
+
+ $cluster->create_cluster_ok( @services )
+
     Adds the given services to the test cluster. Each element in the
     services array may be either
 
     string
-        The string is taken to be the Mojolicious or Clustericious
-        application class name. No configuration is created or passed into
-        the App.
 
-        This can also be the name of a Mojolicious::Lite application. The
-        PATH environment variable will be used to search for the lite
-        application. The script for the lite app must be executable. You can
-        specify additional directories to search using the "lite_path"
-        argument to the constructor.
+      The string is taken to be the Mojolicious or Clustericious
+      application class name. No configuration is created or passed into
+      the App.
+
+      This can also be the name of a Mojolicious::Lite application. The
+      PATH environment variable will be used to search for the lite
+      application. The script for the lite app must be executable. You can
+      specify additional directories to search using the lite_path argument
+      to the constructor.
 
     list reference in the form: [ string, hashref ]
-        The string is taken to be the Mojolicious application name. The
-        hashref is the configuration passed into the constructor of the app.
-        This form should NOT be used for Clustericious apps (see the third
-        form).
+
+      The string is taken to be the Mojolicious application name. The
+      hashref is the configuration passed into the constructor of the app.
+      This form should NOT be used for Clustericious apps (see the third
+      form).
 
     list reference in the form: [ string, string ]
-        The first string is taken to be the Clustericious application name.
-        The second string is the configuration in either YAML or JSON format
-        (may include Mojo::Template templating in it, see
-        Clustericious::Config for details). This form requires that you have
-        Clustericous installed, and of course should not be used for
-        non-Clustericious Mojolicious applications.
 
-  $cluster->create_plugauth_lite_ok( %args )
+      The first string is taken to be the Clustericious application name.
+      The second string is the configuration in either YAML or JSON format
+      (may include Mojo::Template templating in it, see
+      Clustericious::Config for details). This form requires that you have
+      Clustericous installed, and of course should not be used for
+      non-Clustericious Mojolicious applications.
+
+ $cluster->create_plugauth_lite_ok( %args )
+
     Add a PlugAuth::Lite service to the test cluster. The %args are passed
     directly into the PlugAuth::Lite constructor.
 
     You can retrieve the URL for the PlugAuth::Lite service using the
-    "auth_url" attribute.
+    auth_url attribute.
 
-    This feature requires PlugAuth::Lite and Clustericious 0.9925 or better,
-    though neither are a prerequisite of this module. If you are using this
-    method you need to either require PlugAuth::Lite and Clustericious
-    0.9925 or better, or skip your test in the event that the user has an
-    earlier version. For example:
+    This feature requires PlugAuth::Lite and Clustericious 0.9925 or
+    better, though neither are a prerequisite of this module. If you are
+    using this method you need to either require PlugAuth::Lite and
+    Clustericious 0.9925 or better, or skip your test in the event that the
+    user has an earlier version. For example:
 
      use strict;
      use warnings;
@@ -229,24 +250,29 @@ METHODS
          unless eval q{ use PlugAuth::Lite; 1 };
      };
 
-  $cluster->stop_ok( $index, [ $test_name ])
+ $cluster->stop_ok( $index, [ $test_name ])
+
     Stop the given service. The service is specified by an index, the first
     application when you created the cluster is 0, the second is 1, and so
     on.
 
-  $cluster->start_ok( $index, [ $test_name ] )
-    Start the given service. The service is specified by an index, the first
-    application when you created the cluster is 0, the second is 1, and so
-    on.
+ $cluster->start_ok( $index, [ $test_name ] )
 
-  $cluster->create_ua
-    Create a new instance of Mojo::UserAgent which can be used to connect to
-    nodes in the test cluster.
+    Start the given service. The service is specified by an index, the
+    first application when you created the cluster is 0, the second is 1,
+    and so on.
+
+ $cluster->create_ua
+
+    Create a new instance of Mojo::UserAgent which can be used to connect
+    to nodes in the test cluster.
 
 AUTHOR
+
     Graham Ollis <plicease@cpan.org>
 
 COPYRIGHT AND LICENSE
+
     This software is copyright (c) 2013 by Graham Ollis.
 
     This is free software; you can redistribute it and/or modify it under
